most of the summary statistics calculated for new posteriors

--- a/manuscript/reply_to_reviewers.tex
+++ b/manuscript/reply_to_reviewers.tex
@@ -174,14 +174,14 @@
 
 	4/ absence of simulations: the authors proposed an original approach based on a bayesian framework. Beyond the identifiability question (see above), the reader can question the power of the method. Usually, a methodological proposal comes with a complete simulation study that is supposed to show  the proposed model is adapted/suitable to the question and efficient to solve it. In the paper in its present form, the authors assume that the reader will be convinced by the results obtained on a single real dataset… In my opinion, the reader can’t be fairly convinced: how powerfull is the method? what can we say about the priors? how much data (n, k) is necessary to expect good results? An so on… Only a well-conducted simulation study can answer these questions.
 
-	5/ results&discussion too short: the reader is surprised to read 27 lines of raw results only… Given the amount of new methodology that is proposed, one can expect a complete description of its pros and cons. Obvisouly, a simulation study (see above) would enrich the results part. Forgetting about the length of these parts, it is still difficult to catch the key messages from the text, and it is not obvious to relate discussion and the obtained results (for instance,from l.343 to l.351).
+	5/ results\&discussion too short: the reader is surprised to read 27 lines of raw results only… Given the amount of new methodology that is proposed, one can expect a complete description of its pros and cons. Obvisouly, a simulation study (see above) would enrich the results part. Forgetting about the length of these parts, it is still difficult to catch the key messages from the text, and it is not obvious to relate discussion and the obtained results (for instance,from l.343 to l.351).
 
-	6/ lack of rigorous notations: it is possible to understand the approach with the present notations but some improvements can help the reader because there are a series of inconsistencies. Here are some suggestions. The authors chose upper case letters L,T ,X,D for single entities whereas the mathematician is used to expect matrices or constants in upper case. Traditionaly, given species i and j, we would consider interaction L_ij, feasibility X_ij, detectionability D_ij...
+	6/ lack of rigorous notations: it is possible to understand the approach with the present notations but some improvements can help the reader because there are a series of inconsistencies. Here are some suggestions. The authors chose upper case letters L,T ,X,D for single entities whereas the mathematician is used to expect matrices or constants in upper case. Traditionaly, given species i and j, we would consider interaction $L_ij$, feasibility $X_ij$, detectionability $D_ij$...
 	Still, what is T?? not defined, never reused: is it a characteristics on i, on j, on both?
 	How can be D<1 on l.169? D=0 or 1 since it says if an interaction is detectable or not...
 	Moreover, L is reused later but is the number of interactions (l.100 supp.mat)…
-	What is “N” in Figure 4? is it “n”? What is n_ij and k_ij l.266? Never defined, never reused.
-	In the beginning of the paper, \lambda is a probability (l.62) but it becomes a random variable (l.164): it would be more consistent to introduce before the notion of hyperparameters  (l.209-213) and to explain we consider that \lambda is drawn into its distribution.
+	What is “N” in Figure 4? is it “n”? What is $n_ij$ and $k_ij$ l.266? Never defined, never reused.
+	In the beginning of the paper, $\lambda$ is a probability (l.62) but it becomes a random variable (l.164): it would be more consistent to introduce before the notion of hyperparameters  (l.209-213) and to explain we consider that $\lambda$ is drawn into its distribution.
 
 	\end{refquote}
 
